--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.5",
+    "angular": "1.5.5",
     "angular-ui-router": "~0.2.15",
     "ngstorage": "~0.3.3",
     "restangular": "~1.5.2",
