Added buildpack and package.json postinstall cmd

--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,10 @@
         ],
         "post-update-cmd": [
             "php artisan optimize"
+        ],
+        "compile": [
+            "bower install",
+            "gulp"
         ]
     },
     "config": {
