--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # name of the software
-name: Jekyll Bootstrap Doc
+name: Laravel Angular Admin
 # current version of the software
-version: 1.1.0
+version: 0.0.1
 # url of the download button
-downloadUrl: https://github.com/mistic100/jekyll-bootstrap-doc
+downloadUrl: https://github.com/silverbux/laravel-angular-admin
 # licence of the software
 license: MIT License
 licenseUrl: http://opensource.org/licenses/MIT
@@ -11,14 +11,14 @@ licenseUrl: http://opensource.org/licenses/MIT
 # list of additional links on the right of the top menu
 headerLinks:
   - title: GitHub
-    url: https://github.com/mistic100/jekyll-bootstrap-doc
+    url: https://github.com/silverbux/laravel-angular-admin
 
 # list if additional links on the footer
 footerLinks:
   - title: GitHub
-    url: https://github.com/mistic100/jekyll-bootstrap-doc
+    url: https://github.com/silverbux/laravel-angular-admin
   - title: Issues
-    url: https://github.com/mistic100/jekyll-bootstrap-doc/issues?state=open
+    url: https://github.com/silverbux/laravel-angular-admin/issues?state=open
 
 # header
 header:
@@ -33,8 +33,8 @@ analytics:
 
 # github buttons
 githubButton:
-  user: mistic100
-  repo: jekyll-bootstrap-doc
+  user: silverbux
+  repo: laravel-angular-admin
 
 # twitter buttons
 twitter:
