--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,9 @@
     "angular-acl": "^0.1.5",
     "angular-datatables": "^0.5.4",
     "sweetalert": "^1.1.3",
-    "checklist-model": "^0.9.0"
+    "checklist-model": "^0.9.0",
+    "angular-flot": "^0.0.16",
+    "Flot": "flot#^0.8.3"
   },
   "resolutions": {
     "angular": "~1.5.x"
